fix checkbox overlapping with header

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ hr { border: 1px solid; }
 .head {
     background-color: white;
     position: fixed;
+    z-index: 1;
     height: 64px;
     padding: 0 24px;
     box-shadow: 0px 0px 4px rgba(0,0,0,.2);
@@ -110,6 +111,7 @@ input[type="radio"] {
     border-radius: 50%;
     position: relative;
     top: 5px;
+    cursor: pointer;
     margin-right: 2px;
     transition: all 0.3s linear;
 }
@@ -117,6 +119,8 @@ input[type="radio"] {
 input[type="radio"]:checked {
     border: 5px solid #0061FF;
 }
+
+label { cursor: pointer; }
 
 /* checkbox end */
 
